evaluation-service/k8s/evaluation-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-evaluation-service
  namespace: evaluation-service
  labels:
    app: evaluation-service
    instance: app-evaluation-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: evaluation-service
      instance: app-evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
        instance: app-evaluation-service
    spec:
      serviceAccountName: evaluation-service-sa
      containers:
        - name: evaluation-service
          # image: evaluation-service:local # Local
          image: 370930247065.dkr.ecr.us-east-2.amazonaws.com/evaluation-service:latest # Nuvem
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
          ports:
            - containerPort: 8004
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 10
            periodSeconds: 15
