evaluation-service/k8s/evaluation-service-ingress.yaml
# evaluation-service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-evaluation-service
  namespace: evaluation-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /evaluation(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-evaluation-service
                port:
                  number: 80
